# SDL_SGD2022

./: CMakeLists.txt
src/: game.cpp  game.hpp  game_entity.cpp  game_entity.hpp  game_misc.hpp  game_texture.hpp  main.cpp
